RESOLVED FIXED285553
REGRESSION(287702@main): <input type=search> in vertical writing mode looks broken
https://bugs.webkit.org/show_bug.cgi?id=285553
Summary REGRESSION(287702@main): <input type=search> in vertical writing mode looks b...
Tim Nguyen (:ntim)
Reported 2025-01-07 13:30:03 PST
Attachments
Lily Spiniolas
Comment 1 2025-01-07 15:48:36 PST
EWS
Comment 2 2025-01-08 11:32:00 PST
Committed 288609@main (3dac33417503): <https://commits.webkit.org/288609@main> Reviewed commits have been landed. Closing PR #38682 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.