REGRESSION (287702@main): <input type=search> in vertical writing mode looks broken https://bugs.webkit.org/show_bug.cgi?id=285553 rdar://142499953

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

Elements in vertical writing mode with appearance equal
to StyleAppearance::SearchField now once again get their
appearance updated to StyleAppearance::TextField regardless of
whether or not devolvable widgets are enabled or supported.

The new layout test checks to make sure the input is displayed
vertically by performing a mismatch check between a search input
partially obscured by a square, and the square only. When
displayed correctly, the tail of the input should protrude from
the square, causing a mismatch. When displayed incorrectly (i.e
the element does not have appearance equal to
StyleAppearance::TextField), the input will be entirely obscured
by the square, causing the two cases to match and thus the test
to fail.

* LayoutTests/fast/forms/vertical-writing-mode/input-search-expected-mismatch.html: Added.
* LayoutTests/fast/forms/vertical-writing-mode/input-search.html: Added.
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle):

Canonical link: https://commits.webkit.org/288609@main